--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,49 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imageDetectContainer button {
+  margin: 0 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.imageContainer {
+  width: 600px;
+  height: 500px;
+  margin: 20px auto;
+  box-shadow: inset 1px 1px 17px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 5%;
+  color: transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.imageContainer img {
+  display: none;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.imageContainer img[src] {
+  display: block; /* Displays when there is a src */
+}
+
+.resultHeader {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.result {
+  text-transform: capitalize;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.custom-file-upload {
+  border: none;
+  background-color: #0076be;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border-radius: 10px;
+  padding: 12px 20px;
+  display: inline-block;
+  font-weight: bold;
+  cursor: pointer;
 }
