--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,8 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
-}
-
-.imageDetectContainer button {
-  margin: 0 10px;
-}
-
-.imageContainer {
-  width: 600px;
-  height: 500px;
-  margin: 20px auto;
-  box-shadow: inset 1px 1px 17px -1px rgba(0, 0, 0, 0.25);
-  border-radius: 5%;
-  color: transparent;
-}
-
-.imageContainer img {
-  display: none;
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
-}
-
-.imageContainer img[src] {
-  display: block; /* Displays when there is a src */
-}
-
-.resultHeader {
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-.result {
-  text-transform: capitalize;
-}
-
-input[type="file"] {
-  display: none;
-}
-
-.custom-file-upload {
-  border: none;
-  background-color: #0076be;
-  color: white;
-  border-radius: 10px;
-  padding: 12px 20px;
-  display: inline-block;
-  font-weight: bold;
-  cursor: pointer;
+  font-family: "Lato", sans-serif;
 }
